<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_medium"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:src="@mipmap/ic_logo"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_above="@+id/title"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="@dimen/text_twenty_two"
        android:layout_above="@+id/ed_email_layout"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_centerHorizontal="true"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ed_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_above="@+id/ed_password_layout">

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:theme="@style/MyEditTextTheme"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ed_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_above="@+id/txt_forgot_password">

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword"
            android:theme="@style/MyEditTextTheme"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/txt_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_medium"
        android:textColor="@color/colorPrimary"
        android:layout_above="@+id/btn_sign_in"
        android:layout_centerHorizontal="true"/>


    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_button_height"
        android:text="@string/signin_button"
        android:textColor="@color/white"
        android:background="@drawable/default_button"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_above="@+id/btn_fb_login"/>

    <com.phillipcalvin.iconbutton.IconButton
        android:id="@+id/btn_fb_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_button_height"
        android:drawableLeft="@drawable/ic_fb_light"
        android:text="@string/fb_login_button"
        android:textColor="@color/white"
        app:iconPadding="20dp"
        android:background="@drawable/button_border_facebook"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_above="@+id/txt_email_signup"/>

        <TextView
            android:id="@+id/txt_email_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_signup"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            />

    </RelativeLayout>




</RelativeLayout>