<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/blood_request"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_large" />


            <co.nexlabs.socialblood.view.CircularTextView
                android:id="@+id/tv_blood_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_large"
                android:gravity="center"
                android:padding="@dimen/margin_large"
                android:text="AB+"
                android:textColor="@color/white"
                android:textSize="@dimen/text_twenty" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large">

                <TextView
                    android:id="@+id/loca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_large"
                    android:text="@string/location" />

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/loca"
                    android:layout_marginLeft="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_toLeftOf="@+id/img_loca"
                    android:text="Getting your location..."
                    android:textColor="@color/text_dark_gray"
                    android:textSize="@dimen/text_small" />


                <ImageView
                    android:id="@+id/img_loca"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@+id/tv_location"
                    android:layout_marginEnd="35dp"
                    android:layout_marginRight="35dp"
                    android:src="@mipmap/ic_location" />

            </RelativeLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ed_phone_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginRight="@dimen/margin_large"
                    android:layout_toLeftOf="@+id/call">

                    <EditText
                        android:id="@+id/ed_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Phone"
                        android:inputType="phone"
                        android:singleLine="true"
                        android:theme="@style/MyEditTextTheme" />


                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="34dp"
                    android:src="@drawable/ic_call"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginBottom="@dimen/margin_small"/>


            </FrameLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_pet_title"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_medium"/>
            <Spinner
                android:id="@+id/sp_pet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_large"
                android:layout_marginLeft="@dimen/margin_large"></Spinner>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"
                android:layout_marginRight="@dimen/margin_large"
                android:layout_marginLeft="@dimen/margin_large"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ed_about_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_large"
                    android:layout_marginRight="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_medium">

                    <EditText
                        android:id="@+id/ed_about"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top|left"
                        android:hint="About (Optional)"
                        android:minLines="3"
                        android:theme="@style/MyEditTextTheme" />

                </android.support.design.widget.TextInputLayout>

                <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/ic_location"-->
                <!--android:layout_gravity="bottom|right"-->
                <!--android:layout_marginBottom="@dimen/margin_medium"-->
                <!--android:layout_marginRight="@dimen/margin_large"/>-->

            </FrameLayout>

            <Button
                android:id="@+id/btn_done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@drawable/default_button"
                android:text="DONE"
                android:textColor="@color/white"
                android:layout_marginBottom="@dimen/margin_large"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>